k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omicron
---
apiVersion: v1
kind: Namespace
metadata:
  name: omicron-browser
